styled the head and the top preformence

--- a/index.html
+++ b/index.html
@@ -6,5 +6,65 @@
     <link rel="stylesheet" href="style.css" />
     <title>Admin Dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <div class="main-page">
+      <div class="sidebar">this is the sidebar</div>
+      <div class="main-contect">
+        <div class="header">
+          <div class="profile">
+            <img src="/img/add.svg" id="plus" />
+            <div class="profile-image" id="thired-profile-img">
+              <img src="/profile-backround-without/guy-with-glasses.svg" />
+            </div>
+            <div class="profile-image" id="first-profile">
+              <img src="/profile-backround-without/guy-with-glasses.svg" />
+            </div>
+            <div class="profile-image" id="secound-profile-img">
+              <img src="/profile-backround-without/guy-with-glasses.svg" />
+            </div>
+          </div>
+          <div class="search">
+            <img src="/img/search.svg" /><input type="search" />
+          </div>
+
+          <div class="my-profile">
+            <div class="icones">
+              <img src="/img/active.svg" />
+              <img src="/img/comment.svg" />
+            </div>
+            <div class="profile-image">
+              <img src="/profile-backround-without/guy-with-glasses.svg" />
+            </div>
+          </div>
+        </div>
+        <div class="top-prfomence">
+          <div class="cards-stats">
+            <p>finished</p>
+            <p>29</p>
+          </div>
+          <div class="cards-stats">
+            <p>unfinish</p>
+            <p>38</p>
+          </div>
+          <div class="cards-stats">
+            <p>working on</p>
+            <p>4</p>
+          </div>
+          <div class="cards-stats">
+            <p>dropped</p>
+            <p>7</p>
+          </div>
+        </div>
+
+        <div class="cards-continer">
+          <div class="cards"></div>
+          <div class="cards"></div>
+          <div class="cards"></div>
+          <div class="cards"></div>
+        </div>
+        <div class="Announcements">big news Announcements</div>
+        <div class="trending">trending</div>
+      </div>
+    </div>
+  </body>
 </html>
