finished the basic cosept of the website

--- a/index.html
+++ b/index.html
@@ -8,7 +8,63 @@
   </head>
   <body>
     <div class="main-page">
-      <div class="sidebar">this is the sidebar</div>
+      <div class="sidebar">
+        <div class="logo">Orbter.net</div>
+        <div class="sidebar-contect">
+          <div class="sidebar-itmes">
+            <img src="/sidbar-img/home-_1_.svg" />
+            <h3>Home</h3>
+          </div>
+          <div class="sidebar-itmes">
+            <img src="/sidbar-img/user-_1_.svg" />
+            <h3>Profile</h3>
+          </div>
+          <div class="sidebar-itmes">
+            <img src="/sidbar-img/message.svg" />
+            <h3>Messages</h3>
+          </div>
+          <div class="sidebar-itmes">
+            <img src="/sidbar-img/calendar.svg" />
+            <h3>Projects</h3>
+          </div>
+          <div class="sidebar-itmes">
+            <img src="/sidbar-img/to-do-list.svg" />
+            <h3>Tasks</h3>
+          </div>
+          <div class="sidebar-itmes">
+            <img src="/sidbar-img/history.svg" />
+            <h3>History</h3>
+          </div>
+        </div>
+        <div class="sidebar-settings">
+          <div class="sidebar-itmes">
+            <img src="sidbar-img/settings.svg" />
+            <h3>Settings</h3>
+          </div>
+          <div class="sidebar-itmes">
+            <img
+              src="/sidbar-img/question-mark-on-a-circular-black-background (1).svg"
+            />
+            <h3>Support</h3>
+          </div>
+
+          <div class="sidebar-itmes">
+            <img src="/sidbar-img/padlock.svg" />
+            <h3>Privacy</h3>
+          </div>
+        </div>
+        <div class="sidebar-ohter">
+          <div class="sidebar-itmes" id="logout">
+            <img src="/sidbar-img/logout.svg" />
+            <h3>Logout</h3>
+          </div>
+          <div class="sidebar-itmes">
+            <img src="/sidbar-img/medal.svg" />
+            <h3>Subscription</h3>
+          </div>
+        </div>
+      </div>
+
       <div class="main-contect">
         <div class="header">
           <div class="profile">
@@ -94,8 +150,45 @@
             </p>
           </div>
         </div>
-        <div class="Announcements">big news Announcements</div>
-        <div class="trending">trending</div>
+        <div class="Announcements">
+          <div class="announcements-container">
+            <h2>New Announcements</h2>
+            <div class="big-announcements">
+              <h4>heavy rain</h4>
+              <p>becase of heavy rain you can work from home tomorow</p>
+            </div>
+            <div class="big-announcements">
+              <h4>pets on work</h4>
+              <p>
+                because of the new demand for pets at work we startin a new
+                policy that you can bring your pet 2 times a week if it does not
+                disturb ohter on work
+              </p>
+            </div>
+            <div class="big-announcements">
+              <h4>vacation cut</h4>
+              <p>
+                because of the scedual we can't allow all the the vacation days,
+                so if somone is affected by the new policy they will get 20%
+                yearly salry bouns for this year
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="trending">
+          <div class="the-winner">
+            <h3>the workers of the month</h3>
+            <div class="winner-profile">
+              <img src="/profile-backround-without/guy-with-glasses.svg" />
+            </div>
+            <p>Yuval</p>
+          </div>
+
+          <div class="hou-much">
+            <p>finished 8 projets this month!</p>
+            <h2>8</h2>
+          </div>
+        </div>
       </div>
     </div>
   </body>
