made the website responsive but need visuale update

--- a/index.html
+++ b/index.html
@@ -591,6 +591,12 @@
       </div>
       <div class="main-contect">
         <div class="header">
+          <div class="sidebar-pop">
+            <img
+              src="/profile-backround-without/menu-removebg-preview.svg"
+              alt="sidebar-pop"
+            />
+          </div>
           <div class="profile">
             <img src="/img/add.svg" id="plus" />
             <div class="user-image" id="thired-profile-img">
@@ -648,41 +654,44 @@
           </div>
         </div>
         <div class="cards-continer">
-          <div class="cards">
-            <h4>improve design</h4>
-            <p>
-              Enhance design by refining color schemes, improving typography,
-              and optimizing layout. Consider user feedback for a more
-              user-friendly experience. Focus on consistency and visual
-              hierarchy for a polished design.
-            </p>
-          </div>
-          <div class="cards">
-            <h4>improve ui</h4>
-            <p>
-              Elevate UI by refining button styles, enhancing navigation, and
-              ensuring responsive design. Address user feedback to create an
-              intuitive and visually appealing interface. Prioritize
-              accessibility and usability for a seamless user experience.
-            </p>
-          </div>
-          <div class="cards">
-            <h4>update prodacts</h4>
-            <p>
-              Update products by adding new arrivals, removing outdated items,
-              and ensuring accurate pricing and descriptions. Optimize product
-              images and categorization for a fresh and appealing product
-              catalog. Verify inventory levels for availability.
-            </p>
-          </div>
-          <div class="cards">
-            <h4>making a comarcial</h4>
-            <p>
-              Create a compelling commercial by scripting, shooting, and editing
-              a promotional video. Highlight key product features, benefits, and
-              the brand's unique value proposition. Optimize visuals and
-              messaging for maximum impact and engagement.
-            </p>
+          <div class="missions"><h3>Your Missions</h3></div>
+          <div class="cards-contect">
+            <div class="cards">
+              <h4>improve design</h4>
+              <p>
+                Enhance design by refining color schemes, improving typography,
+                and optimizing layout. Consider user feedback for a more
+                user-friendly experience. Focus on consistency and visual
+                hierarchy for a polished design.
+              </p>
+            </div>
+            <div class="cards">
+              <h4>improve ui</h4>
+              <p>
+                Elevate UI by refining button styles, enhancing navigation, and
+                ensuring responsive design. Address user feedback to create an
+                intuitive and visually appealing interface. Prioritize
+                accessibility and usability for a seamless user experience.
+              </p>
+            </div>
+            <div class="cards">
+              <h4>update prodacts</h4>
+              <p>
+                Update products by adding new arrivals, removing outdated items,
+                and ensuring accurate pricing and descriptions. Optimize product
+                images and categorization for a fresh and appealing product
+                catalog. Verify inventory levels for availability.
+              </p>
+            </div>
+            <div class="cards">
+              <h4>making a comarcial</h4>
+              <p>
+                Create a compelling commercial by scripting, shooting, and
+                editing a promotional video. Highlight key product features,
+                benefits, and the brand's unique value proposition. Optimize
+                visuals and messaging for maximum impact and engagement.
+              </p>
+            </div>
           </div>
         </div>
         <div class="Announcements">
