finished most ifnot all the missions

--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
       <div class="sidebar">
         <div class="logo">
           <img src="/sidbar-img/logo.svg" alt="logo" id="logo-img" />
+          <div class="sidebar-close">
+            <img
+              src="/profile-backround-without/close-removebg-preview.svg"
+              alt="close"
+            />
+          </div>
         </div>
         <div class="sidebar-main">
           <div class="sidebar-contect">
