--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       rel="stylesheet"
     />
     <script src="script.js" defer></script>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/sidbar-img/report-removebg-preview.svg"
+    />
 
     <title>Admin Dashboard</title>
   </head>
