cheking to seee if the photo are now valid

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link
       rel="icon"
       type="image/x-icon"
-      href="/sidbar-img/report-removebg-preview.svg"
+      href="/sidbar-img/report-removebg-preview.svg "
     />
 
     <title>Admin Dashboard</title>
@@ -23,7 +23,7 @@
     <div class="main-page">
       <div class="sidebar">
         <div class="logo">
-          <img src="/sidbar-img/logo.svg" alt="logo" id="logo-img" />
+          <img src="sidbar-img/logo.svg" alt="logo" id="logo-img" />
           <div class="sidebar-close">
             <img
               src="/profile-backround-without/close-removebg-preview.svg"
