fixed the photos bug

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <img src="sidbar-img/logo.svg" alt="logo" id="logo-img" />
           <div class="sidebar-close">
             <img
-              src="/profile-backround-without/close-removebg-preview.svg"
+              src="profile-backround-without/close-removebg-preview.svg"
               alt="close"
             />
           </div>
@@ -604,24 +604,24 @@
         <div class="header">
           <div class="sidebar-pop">
             <img
-              src="/profile-backround-without/menu-removebg-preview.svg"
+              src="profile-backround-without/menu-removebg-preview.svg"
               alt="sidebar-pop"
             />
           </div>
           <div class="profile">
-            <img src="/img/add.svg" id="plus" />
+            <img src="img/add.svg" id="plus" />
             <div class="user-image" id="thired-profile-img">
-              <img src="/profile-backround-without/blue-shirt-women.svg" />
+              <img src="profile-backround-without/blue-shirt-women.svg" />
             </div>
             <div class="user-image" id="first-profile">
-              <img src="/profile-backround-without/blonde-women.svg" />
+              <img src="profile-backround-without/blonde-women.svg" />
             </div>
             <div class="user-image" id="secound-profile-img">
-              <img src="/profile-backround-without/guy-with-beard.svg   " />
+              <img src="profile-backround-without/guy-with-beard.svg   " />
             </div>
           </div>
           <div class="search">
-            <img src="/img/search.svg" /><input
+            <img src="img/search.svg" /><input
               type="search"
               placeholder="search"
               class="search-input"
@@ -630,11 +630,11 @@
 
           <div class="my-profile">
             <div class="icones">
-              <img src="/img/active.svg" />
-              <img src="/img/comment.svg" />
+              <img src="img/active.svg" />
+              <img src="img/comment.svg" />
             </div>
             <div class="profile-image">
-              <img src="/profile-backround-without/guy-with-glasses.svg" />
+              <img src="profile-backround-without/guy-with-glasses.svg" />
             </div>
             <div class="header-buttons">
               <button class="cards-buttons">New</button>
@@ -734,7 +734,7 @@
           <div class="the-winner">
             <h3>the worker of the month</h3>
             <div class="winner-profile">
-              <img src="/profile-backround-without/guy-with-glasses.svg" />
+              <img src="profile-backround-without/guy-with-glasses.svg" />
             </div>
             <p>Yuval</p>
           </div>
